add: JAVA OPTS, memory adjustment.